# cash_machine

./: .gitignore  README.md  pyproject.toml
cash_machine/: config.py  main.py  router.py
cash_machine/common/: __init__.py  pdf_generator.py  qr_generator.py
cash_machine/common/database/: __init__.py  db_mock.py
cash_machine/modules/models/: items.py
cash_machine/modules/routers/: cash_machine.py  media.py
cash_machine/modules/schemas/: __init__.py  items.py
cash_machine/services/: __init__.py  receipt_info.py  receipt_service.py
templates/: receipt.html
